finishing the project

--- a/src/index.html
+++ b/src/index.html
@@ -15,47 +15,44 @@
   <title>Frontend Mentor | Social links profile</title>
   <link href="output.css" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
-<body class="bg-grey900 text-white h-screen flex justify-center items-center flex-col font-inter text-center text-sm">
-  <main class="bg-grey800 m-auto rounded-lg py-6">
-    <div class="m-auto h-128 w-80 md:w-96 " >
+<body
+  class="bg-grey900 text-white min-h-screen flex justify-center items-center flex-col font-inter text-center text-sm">
+  <main class="bg-grey800 m-auto rounded-lg  border-box">
+    <div class="m-auto h-128 w-80 md:w-96 pb-3 pt-8">
       <img src="../assets/images/avatar-jessica.jpeg" alt="Jessica-Avatar" class="rounded-full m-auto w-20">
-      <h1 class="text-2xl font-semibold">Jessica Randall</h1>
-  <p class="text-green font-bold">London, United Kingdom</p>
-  <p class="text-sm font-normal">"Front-end developer and avid reader."</p>
-  
-<ul>
-  <li><button class="bg-grey700 w-4/5 text-sm font-bold py-3 rounded-md mb-3.5 cursor-pointer hover:bg-green hover:text-grey800">GitHub</button></li>
-  <li><button class="bg-grey700 w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Frontend Mentor</button></li>
-  <li><button class="bg-grey700 w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">LinkedIn</button></li>
-  <li><button class="bg-grey700 w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Twitter</button></li>
-  <li><button class="bg-grey700 w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Instagram</button></li>
-</ul>
-  
-  
-  
-  
-  
+      <h1 class="text-2xl font-semibold mt-5">Jessica Randall</h1>
+      <p class="text-green font-bold mt-1">London, United Kingdom</p>
+      <p class="text-sm font-normal my-5">"Front-end developer and avid reader."</p>
+
+      <ul>
+        <li><button
+            class="bg-grey700 w-72 md:w-4/5 text-sm font-bold py-3 rounded-md mb-3.5 cursor-pointer hover:bg-green hover:text-grey800">GitHub</button>
+        </li>
+        <li><button
+            class="bg-grey700 w-72 md:w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Frontend
+            Mentor</button></li>
+        <li><button
+            class="bg-grey700 w-72 md:w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">LinkedIn</button>
+        </li>
+        <li><button
+            class="bg-grey700 w-72 md:w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Twitter</button>
+        </li>
+        <li><button
+            class="bg-grey700 w-72 md:w-4/5 text-sm font-bold py-3 rounded-md mb-3.5  hover:bg-green hover:text-grey800">Instagram</button>
+        </li>
+      </ul>
+
+
     </div>
-    
+
   </main>
 
-  
-
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+  <footer class="text-xs text-center font-semibold">
+    Challenge by <a class="text-linkColor cursor-pointer hover:text-green"
+      href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a class="text-linkColor cursor-pointer hover:text-green" href="https://github.com/rh0se">Rh0se</a>.
   </footer>
 </body>
 
