moving index.html out of src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
   <title>Frontend Mentor | Social links profile</title>
-  <link href="output.css" rel="stylesheet">
+  <link href="./src/output.css" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
@@ -21,7 +21,7 @@
   class="bg-grey900 text-white min-h-screen flex justify-center items-center flex-col font-inter text-center text-sm">
   <main class="bg-grey800 m-auto rounded-lg  border-box">
     <div class="m-auto h-128 w-80 md:w-96 pb-3 pt-8">
-      <img src="../assets/images/avatar-jessica.jpeg" alt="Jessica-Avatar" class="rounded-full m-auto w-20">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica-Avatar" class="rounded-full m-auto w-20">
       <h1 class="text-2xl font-semibold mt-5">Jessica Randall</h1>
       <p class="text-green font-bold mt-1">London, United Kingdom</p>
       <p class="text-sm font-normal my-5">"Front-end developer and avid reader."</p>
